src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_2_lexical_analysis.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: tokens
---
[
    String {
        literal: "this is a string",
    },
    OpeningRoundBracket,
    ClosingRoundBracket,
    SemiColon,
]
