src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_2_syntax_analysis.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Call {
            function: String {
                literal: "this is a string",
            },
            arguments: [],
        },
    },
]
