src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_3_evaluation_error.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: error
---
Err(
    "Cannot call an object of type BOOLEAN, only functions are callable.",
)
