src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_3_lexical_analysis.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: tokens
---
[
    True,
    OpeningRoundBracket,
    Integer {
        literal: 1,
    },
    ClosingRoundBracket,
    SemiColon,
]
