src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_4_lexical_analysis.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: tokens
---
[
    OpeningRoundBracket,
    Integer {
        literal: 1,
    },
    Plus,
    Integer {
        literal: 2,
    },
    ClosingRoundBracket,
    OpeningRoundBracket,
    Integer {
        literal: 3,
    },
    ClosingRoundBracket,
    SemiColon,
]
