src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_4_syntax_analysis.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Call {
            function: Infix {
                left_hand: Integer {
                    literal: 1,
                },
                operator: Plus,
                right_hand: Integer {
                    literal: 2,
                },
            },
            arguments: [
                Integer {
                    literal: 3,
                },
            ],
        },
    },
]
