src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_5_lexical_analysis.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "five",
    },
    Assign,
    Integer {
        literal: 5,
    },
    SemiColon,
    Identifier {
        literal: "five",
    },
    OpeningRoundBracket,
    Integer {
        literal: 1,
    },
    ClosingRoundBracket,
    SemiColon,
]
