src/tests/evaluation_error/uncallable_object/snapshots/monkey_interpreter__tests__evaluation_error__uncallable_object__test_uncallable_object_case_5_syntax_analysis.snap
---
source: src/tests/evaluation_error/uncallable_object/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "five",
            expression: Integer {
                literal: 5,
            },
        },
    },
    Expression {
        expression: Call {
            function: Identifier {
                identifier: "five",
            },
            arguments: [
                Integer {
                    literal: 1,
                },
            ],
        },
    },
]
